--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -10040,16 +10040,34 @@ a:hover {
     width: 10.6rem;
     margin: 8px 0 0; }
   .header__menu {
-    min-width: 75%; }
+    min-width: 75%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0;
+    padding: 0;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end; }
     .header__menu-link {
       font-size: 1.5rem;
       color: #FFFFFF; }
-  .header__basket {
-    width: 3.66rem;
-    background: #111111;
-    margin: 0 16px 0 0;
-    border: none;
-    outline: none; }
+    .header__menu-wrap-btn {
+      display: none; }
+    .header__menu-btn-nav {
+      display: none;
+      list-style: none;
+      width: 2em;
+      height: 2em;
+      vertical-align: middle;
+      content: "";
+      background: no-repeat center center;
+      background-size: 100% 100%;
+      background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+      border: none; }
   .header__modal {
     display: none;
     list-style: none;
@@ -10061,12 +10079,92 @@ a:hover {
     background-size: 100% 100%;
     background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
     border: none; }
+  .header__basket {
+    width: 3.66rem;
+    background: #111111;
+    margin: 0 16px 0 0;
+    border: none;
+    outline: none; }
 
 @media (max-width: 768px) {
-  .header__menu {
-    display: none; }
-  .header__modal {
-    display: block; } }
+  .header {
+    position: fixed;
+    width: 100%;
+    z-index: 2; }
+    .header__menu {
+      position: relative;
+      background: #FCDA28;
+      width: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: end;
+          -ms-flex-align: end;
+              align-items: flex-end;
+      -webkit-box-pack: start;
+          -ms-flex-pack: start;
+              justify-content: flex-start;
+      padding: 34px 24px 34px 0; }
+      .header__menu-wrap {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 100%;
+        -webkit-transition: 0.2s ease left;
+        -o-transition: 0.2s ease left;
+        transition: 0.2s ease left;
+        z-index: 2; }
+        .header__menu-wrap-btn {
+          display: block;
+          width: 100px;
+          -ms-flex-negative: 0;
+              flex-shrink: 0;
+          font-size: 3rem;
+          font-weight: normal;
+          background: transparent;
+          border: none;
+          padding: 36px 0;
+          position: relative; }
+          .header__menu-wrap-btn:after, .header__menu-wrap-btn:before {
+            content: '';
+            display: block;
+            width: 30px;
+            height: 2px;
+            background: #FCDA28;
+            position: absolute;
+            -webkit-transform: rotate(45deg);
+                -ms-transform: rotate(45deg);
+                    transform: rotate(45deg);
+            left: 24px;
+            top: 36px; }
+          .header__menu-wrap-btn:before {
+            -webkit-transform: rotate(135deg);
+                -ms-transform: rotate(135deg);
+                    transform: rotate(135deg); }
+        .header__menu-wrap-bg {
+          background: rgba(0, 0, 0, 0.9); }
+        .header__menu-wrap-active {
+          left: 0; }
+      .header__menu-btn-nav {
+        display: block; }
+      .header__menu-link {
+        color: #111111;
+        font-size: 3rem;
+        font-weight: bold;
+        display: block;
+        padding: 10px 0;
+        white-space: normal;
+        text-align: right; }
+    .header__modal {
+      display: block; } }
 
 .info__bg {
   background: #FCDA28; }
@@ -10104,6 +10202,12 @@ a:hover {
     max-width: 26%;
     font-size: 1.5rem;
     line-height: 1.75rem; }
+
+@media (max-width: 768px) {
+  .info {
+    padding-top: 9.5rem; }
+    .info__title {
+      font-size: 6rem; } }
 
 .order__bg {
   background-color: #111111; }
